Removed db-based statistics feature
Statistics code cleanup

Issue-ID: POLICY-4109
